# 2025_I2P2_TowerDefense

./: .gitignore  CMakeLists.txt  Objective.blend  Objective.blend1  Readme.md  main.cpp
3D/: Billboard.cpp  Billboard.hpp  Group3D.cpp  Group3D.hpp  Object3D.cpp  Object3D.hpp
Bullet/: Bullet.cpp  Bullet.hpp  FireBullet.cpp  FireBullet.hpp  HomingBullet.cpp  HomingBullet.hpp  LaserBullet.cpp  LaserBullet.hpp
Enemy/: Enemy.cpp  Enemy.hpp  PlaneEnemy.cpp  PlaneEnemy.hpp  SoldierEnemy.cpp  SoldierEnemy.hpp  TankEnemy.cpp  TankEnemy.hpp
Engine/: AudioHelper.cpp  GameEngine.cpp  GameEngine.hpp  Group.hpp  IControl.cpp  IControl.hpp  IObject.cpp  IObject.hpp  IScene.cpp  Point.cpp  Point.hpp  Resources.cpp  Resources.hpp  Settings.cpp  Settings.hpp
Engine/spine/: spine.cpp  spine.hpp
Entities/: Enemies.hpp  Enemy.cpp  Enemy.hpp  Entity.cpp  Entity.hpp  Operator.cpp  Operator.hpp  Operators.hpp
Entities/Enemies/: DU1.cpp  DU1.hpp  N4.cpp  N4.hpp  N5.cpp  N5.hpp  N6.cpp  N6.hpp  N7.cpp  N7.hpp  N9.cpp  N9.hpp  O3.cpp  O3.hpp  Slime.cpp  Slime.hpp
Entities/Operators/: Amiya.cpp  Amiya.hpp  Cetsyr.cpp  Cetsyr.hpp  Logos.cpp  Logos.hpp  Necras.cpp  Necras.hpp  Reed2.cpp  Reed2.hpp  Shu.cpp  Shu.hpp  Wisadel.cpp  Wisadel.hpp
Operator/: Operator.cpp  Operator.hpp
Resource/: Cube.glb  Cube.gltf  Dirt.glb  enemy1-1$0.txt  enemy1-1$1.txt  enemy1-1.txt  enemy1-2$0.txt  enemy1-3$0.txt  enemy1-3$1txt  enemy1-3.txt  enemy1.txt  map1-1.txt  map1-2.txt  map1-3.txt  map1.txt  scoreboard.txt  test.ogv
Resource/3D/: BlueBox.glb  RedBox.glb  TileHigh.glb  TileHigh2.glb  TileHighForbid2.glb  TileLow.glb  TileLow2.glb  TileLowForbid2.glb  blue box.glb  hground black.glb  hground white.glb  lground black.glb  lground white.glb  red box.glb
Resource/plot/: 1-1.txt  1-2.txt  1-3.txt  1-3A.txt  1-3B.txt  1-4.txt  Intro.txt
Resource/shaders/: light.frag  light.vert
Scene/: LoseScene.cpp  PlayScene.cpp  PlayScene.hpp  ScoreScene.cpp  ScoreScene.hpp  SettingsScene.cpp  SettingsScene.hpp  StageSelectScene.cpp  StageSelectScene.hpp  StartScene.cpp  StartScene.h  StoryScene.cpp  StoryScene.h  WinScene.cpp  WinScene.hpp
Turret/: DefenderTurret.cpp  DefenderTurret.hpp  FreezeTurret.cpp  FreezeTurret.hpp  HomingTurret.cpp  HomingTurret.hpp  LaserTurret.cpp  MachineGunTurret.cpp  Turret.cpp  Turret.hpp  TurretButton.cpp
UI/: Video.cpp  Video.hpp
UI/Animation/: DirtyEffect.cpp  Plane.cpp
UI/Component/: Image.cpp  Image.hpp  ImageButton.hpp  Label.cpp  Slider.cpp
allegro/lib/: allegro_monolith-debug.lib  allegro_monolith.lib
allegro/lib/cmake/allegro/: AllegroConfig.cmake  AllegroTargets-debug.cmake  AllegroTargets-relwithdebinfo.cmake  AllegroTargets.cmake
